0.20.6	2020-08-29

 * Add a ``RefsContainer.watch`` interface.
   (Jelmer Vernooĳ, #751)

 * Fix pushing of new branches from porcelain.push.
   (Jelmer Vernooĳ, #788)

 * Honor shallows when pushing from a shallow clone.
   (Jelmer Vernooĳ, #794)

 * Fix porcelain.path_to_tree_path for Python 3.5.
   (Boris Feld, #777)

0.20.5	2020-06-22

 * Print a clearer exception when setup.py is executed on Python < 3.5.
   (Jelmer Vernooĳ, #783)

 * Send an empty pack to clients if they requested objects, even if they
   already have those objects. Thanks to Martijn Pieters for
   the detailed bug report. (Jelmer Vernooĳ, #781)

 * porcelain.pull: Don't ask for objects that we already have.
   (Jelmer Vernooĳ, #782)

 * Add LCA implementation. (Kevin Hendricks)

 * Add functionality for finding the merge base. (Kevin Hendricks)

 * Check for diverged branches during push.
   (Jelmer Vernooĳ, #494)

 * Check for fast-forward during pull. (Jelmer Vernooĳ, #666)

 * Return a SendPackResult object from
   GitClient.send_pack(). (Jelmer Vernooĳ)

 * ``GitClient.send_pack`` now sets the ``ref_status`` attribute
   on its return value to a dictionary mapping ref names
   to error messages. Previously, it raised UpdateRefsError
   if any of the refs failed to update.
   (Jelmer Vernooĳ, #780)

 * Add a ``porcelain.Error`` object that most errors in porcelain
   derive from. (Jelmer Vernooĳ)

 * Fix argument parsing in dulwich command-line app.
   (Jelmer Vernooĳ, #784)

0.20.3	2020-06-14

 * Add support for remembering remote refs after push/pull.
   (Jelmer Vernooĳ, #752)

 * Support passing tree and output encoding to
   dulwich.patch.unified_diff. (Jelmer Vernooĳ, #763)

 * Fix pushing of new refs over HTTP(S) when there are
   no new objects to be sent.
   (Jelmer Vernooĳ, #739)

 * Raise new error HTTPUnauthorized when the server sends
   back a 401. The client can then retry with credentials.
   (Jelmer Vernooĳ, #691)
